[package]
name = "synthius_v0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "synthius_v0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
clockwork-sdk = "2.0.1"
pyth-sdk = "0.7.0"
pyth-sdk-solana = "0.7.1"
solana-program = ">= 1.10, < 1.15"
